[package]
name = "upload"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/Thewbi/neorv_bootloader_app_uploader"
description = "After reseting, when the NEORV32 bootloader is available over UART, will upload a neorv32_exe.bin"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.14.0", features = ["smol", "advanced"] }
serialport = "4.8.1"
# rodio = "0.17"
# lazy_static = "1.4"
# rsbmalloc = "0.4.3"

# [target.'cfg(target_os = "macos")'.dependencies]
# fruitbasket = "0.10"
